--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ body#grad1{
 
 .first-section{
     position:relative;
+    width:calc(100vw + 40px);
 }
 
 .first-section::after{
@@ -340,6 +341,7 @@ canvas {
     display: flex;
     justify-content: center;
     align-content: center;
+    width:100vw;
     flex-wrap: wrap;
     padding:30px;
 
@@ -351,7 +353,7 @@ canvas {
         font-size:20px;
         line-height: 25px;
         text-align: center;
-        width:40%;
+        width:max(40%, 300px);
     }
 }
 
@@ -508,12 +510,13 @@ img:hover{
 
         & p{
             font-size:17px;
+            width:80vw;
             line-height: 19px;
         }
 
         & h1{
             line-height:50px;
-            max-width:100%;
+            max-width:100vw;
             font-size:60px;
         }
     }
@@ -537,8 +540,9 @@ img:hover{
         display: flex;
         flex-direction: column;
         gap:10px;
-        margin-left:50%;
-        transform: translateX(-50%);
+        width:100vw;
+        align-content: center;
+        flex-wrap:wrap;
 
         & div{
             top:unset !important;
