--- a/styles.css
+++ b/styles.css
@@ -570,8 +570,8 @@ img:hover{
 
     .header#grad1 + p{
         text-align: center;
-        width:100vw;
-        max-width:100vw;
+        width:100%;
+        max-width:100%;
         padding:0;
     }
 }
