--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ canvas {
     display: flex;
     justify-content: center;
     align-content: center;
-    width:100vw;
+    width:100%;
     flex-wrap: wrap;
     padding:30px;
 
