--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ body#grad1{
 
     filter:brightness(1) saturate(3);
 
+    background-attachment:fixed;
     z-index: -2;
     clip-path: none;
 }
