--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,16 @@ body{
 
 body#grad1{
     background:white;
-
-    & h1{
+}
+body#grad1 > h1{
         color: black;
     }
 
-    & h2, h3, h4, h5, h6{
+body#grad1 > h2,body#grad1 > h3,body#grad1 > h4,body#grad1 > h5,body#grad1 > h6{
         color:rgba(0, 0, 0, 0.64);
     }
 
-    & p{
+body#grad1 > p{
         color:rgba(0, 0, 0, 0.4);
     }
 }
@@ -50,7 +50,9 @@ body#grad1{
 
     flex-wrap:wrap;
 
-    & h1{
+}
+
+.hero > h1{
         font-size:max(5vw, 50px);
         color:rgb(255, 255, 255);
 
@@ -63,7 +65,6 @@ body#grad1{
 
         background:rgba(255, 255, 255, 0.16);
     }
-}
 
 .navbar{
     position: fixed;
@@ -82,7 +83,9 @@ body#grad1{
     justify-content: center;
     font-size:20px;
 
-    & a{
+}
+
+.navbar > a{
         text-decoration: none;
         color:rgb(255, 255, 255);
         border:1px solid rgba(255, 255, 255, 0.494);
@@ -94,15 +97,14 @@ body#grad1{
         height:fit-content;
     }
 
-    & a:hover{
+.navbar > a:hover{
         background-color:rgba(255, 255, 255, 0.4);
         transition: .3s ease;
     }
 
-    & #nav{
+.navbar > #nav{
         display:none;
-    }  
-}
+    }
 
 #navbar{
     display:none;
@@ -230,8 +232,8 @@ li{
     justify-content: left;
     flex-wrap: wrap;
     align-content: center;
-
-    & p{
+}
+.header-container > p{
         color:white;
         opacity:0.5;
         font-size:1vw;
@@ -239,11 +241,10 @@ li{
         width:40%;
     }
 
-    & p, h1{
+.header-container > p, .header-container >  h1{
         height:fit-content;
         max-width:60vw;
     }
-}
 
 canvas {
     display: block;
@@ -275,27 +276,27 @@ canvas {
     margin-inline:30px;
 
     text-align: center;
-    & h1{
+.font-list > h1{
         font-size:3vw;
     }
 
-    & h2{
+.font-list > h2{
         font-size:2.5vw;
     }
 
-    & h3{
+.font-list > h3{
         font-size:2vw;
     }
 
-    & h4{
+.font-list > h4{
         font-size:1.5vw;
     }
 
-    & p{
+.font-list > p{
         font-size:25px;
     }
 
-    & textarea{
+.font-list > textarea{
         background-color:rgba(255, 255, 255, 0.2);
         border-radius: 10px;
         overflow:hidden;
@@ -307,7 +308,6 @@ canvas {
         border:none;
         width:calc(100% - 2vw);
     }
-}
 .centered{
     display: flex;
     flex-wrap:wrap;
@@ -344,14 +344,15 @@ canvas {
 
     margin-block:20vh;
 
-    & p{
+}
+    
+.section > p{
         color:white;
         opacity:0.5;
         font-size:20px;
         line-height: 25px;
         text-align: center;
         width:max(40%, 300px);
-    }
 }
 
 lb{
@@ -367,17 +368,16 @@ lb{
     flex-wrap: wrap;
     max-width: 90%;
 
-    & img{
+}
+.flex> img{
         width:25vw;
         border-radius: 10px;
         transition: .4s ease-out;
     }
 
-    & img:hover{
-
+.flex > img:hover{
         scale:1.1;
         transition: .4s ease-out;
-    }
 }
 
 .container{
@@ -389,13 +389,14 @@ lb{
 .bentobig{
     columns:3 200px;
 
-    & img{
+}
+    
+.bentobig > img{
         width:100%;
 
         border-radius: 10px;
             
         box-shadow:0px 0px 20px rgba(255, 255, 255, 0.3);
-    }
 }
 
 img{
@@ -426,11 +427,12 @@ img:hover{
     border-radius: 10px;
 
     transition: .4s ease-out;
-    & img{
+}
+    
+    .image-collection > div > img{
         width:100%;
         max-width:100vw;
     }
-}
 
 .image-collection > div:hover{
     transform:translate(-50%, -3vw);
@@ -486,10 +488,11 @@ img:hover{
         transform:translateY(calc(-100% + 87px));
         transition: .4s ease;
 
-        & #nav{
+    }
+    
+    .navbar > #nav{
             display:block;
         }
-    }
 
     .navbar:hover{
         transform:none;
@@ -505,14 +508,14 @@ img:hover{
     .header-container{
         position: relative;
         max-height: 50vh;
-
-        & p{
+    }
+    
+    .header-container > p{
             font-size:17px;
             width:80vw;
             line-height: 19px;
         }
-
-        & h1{
+    .header-container > h1{
             line-height:50px;
             max-width:100vw;
             font-size:60px;
@@ -542,7 +545,9 @@ img:hover{
         align-content: center;
         flex-wrap:wrap;
 
-        & div{
+    }
+    
+    .image-collection > div{
             top:unset !important;
             left:unset !important;
             z-index:1 !important;
@@ -551,19 +556,16 @@ img:hover{
             width:200px !important;
         }
 
-        & div:hover{
-            transform:scale(1.05);
-        }
+    .image-collection > div:hover{
+        transform:scale(1.05);
     }
 
     .spacer{
         height:40px;
     }
 
-    .flex{
-        & img{
-            width:calc(100vw - 80px);
-        }
+    .flex > img{
+        width:calc(100vw - 80px);
     }
 
     .header#grad1 + p{
